--- a/visualizer/templates/file_upload.html
+++ b/visualizer/templates/file_upload.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Gráfico CSV</title>
+    <title>Graficación</title>
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>Gráfico de datos CSV</h1>
-    <img src="data:image/png;base64,{{ imagen }}" alt="Gráfico CSV" />
+    <div class="container-fluid">
+        <div class="row justify-content-center" style="padding-top: 50px;">            
+            <img class="col-auto" src="data:image/png;base64,{{ imagen }}" alt="Gráfico CSV" />
+        </div>
+        <div class="row justify-content-center" style="padding-top: 50px;">
+            <form action="{% url 'home' %}" class="col-auto" style="margin-left: 100px;">
+                <button type="submit" class="btn btn-danger col-auto">Atrás</button>
+            </form>
+            <form action="" class="col-auto">
+                <button class="btn btn-success col-auto"> Guardar</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
